[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "datocms"
authors = [{ name = "Rostyslav Bohomaz", email = "rostyslav.db@gmail.com" }]
description = "Python libary for DatoCMS"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["datocms"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
Repository = "https://github.com/rostyq/python-datocms"

[tool.hatch.version]
path = "datocms/__init__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
